RecipeTop/main/static/main/css/cards.css
.ingredient_props {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-items: center;
  align-items: center;
}

.ingredient_title {
  display: flex;
  align-items: center;
  justify-content: center;
}

.float_heart {
  position: absolute;
  top: 5%;
  right: 4%;
  z-index: 5;
  font-size: 45px;
}

.ingredient_props span {
  vertical-align: center;
  margin-left: 2px;
  font-size: 9px;
}

.ingredient_props i {
  vertical-align: top;
}

.serving_size {
  color: #ff6f00;
}

.cook_time {
  color: #ff6f00;
}

.utensils {
  color: #ff6f00;
}

/*# sourceMappingURL=cards.css.map */

